<resources>
    <string name="app_name">Traveling</string>
    <string name="background_app">background</string>
    <string name="background_img">TODO</string>
    <string name="next">Next</string>
    <string name="traveling_description">Hola, estamos buscando a millones de usuarios con inquietudes y ganas de viajar. Si eres tu?No lo dudes accede a nuestra app y descubriras miles de destinos y facilidades para alquilar coches, ver el tiempo....</string>
    <string name="traveling_title">Tu app de viajes</string>
    <string name="upcoming_meetups">Upcoming meetups</string>
    <string name="icon_mountain">icon_mountain</string>
    <string name="icon_heart">Icon heart</string>
    <string name="icon_camera">icon camera</string>
    <string name="icon_person">Icon person</string>
    <string name="calendar_img">Calendar im</string>
    <string name="outside_img">outside_img</string>
    <string name="maldives_3_weeks">Maldives - 3 weeks</string>
    <string name="beach_vacation">Beach vacation</string>
    <string name="city_of_los_angeles">City of Los Angeles</string>
    <string name="usa_los_angeles_2_weeks">USA, Los Angeles - 2 weeks</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_new">Get new</string>
    <string name="have_account">Do you have an account?</string>
    <string name="create_new">Create new</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_new_description">Proximamente se podra crear una cuenta</string>
    <string name="get_new_description">Proximamente se podra cambiar la contraseña</string>
    <string name="como_te_llamas">¿Como te llamas?</string>
    <string name="y_tu_apellido">¿Y tu apellido?</string>
    <string name="edad_tienes">¿Cuantos años tienes?</string>
    <string name="error_name_lastname">Ups, no creo que sea correcto, revísalo</string>
    <string name="app_not_for_you">Esta app no es para ti</string>
    <string name="me_apunto">Me apunto</string>
    <string name="politica_de_privacidad">Política de privacidad</string>
    <string name="ver_condiciones">Ver condiciones</string>
    <string name="registro">Registro</string>
    <string name="error_login">usuario y/o contraseña inconrrectos</string>
    <string name="eurodisney">Eurodisney</string>
    <string name="alquila_un_coche">Alquila un coche</string>

    <string-array name="years">
        0-5/6-11/12-17/18-99
        <item>0–5</item>
        <item>6–11</item>
        <item>12–17</item>
        <item>18–99</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entendido">ENTENDIDO</string>
    <string name="wrong_auth_dialog_text">Usuario y/o contraseña incorrectos, por favor verifique los datos</string>
    <string name="title_activity_nav_host_navigation">NavHostNavigation</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_navigation_host">NavigationHost</string>
    <string name="find_your_match">Find Your Match!</string>
    <string name="exitAppDescription">No puede continuar usando la app, tiene que salir</string>
    <string name="info">Informacion</string>
    <string name="exit">salir</string>
    <string name="notification_description">Nos alegra verte en este paraíso.</string>
    <string name="welcome">\"Bienvenido \"</string>
    <string name="old_price">150$</string>
    <string name="price">100$</string>
    <string name="locality">Barcelona</string>
    <string name="address">La Rambla, La 111</string>
    <string name="hotel_name">Le Meridien Barcelona</string>
    <string name="hotel_rating">5</string>

</resources>